Regression: Alt key remains locked in inactive blender window #103722

Closed
opened 2023-01-07 20:31:08 +01:00 by Dago · 16 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD Radeon RX 6800 ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: 55485cb379
Worked: 3.3
Caused by 8bc76bf4b9

Short description of error
Alt key remains locked in inactive blender window when alt tab is used to switch to another application

Exact steps for others to reproduce the error

  • Open default blender scene
  • Open another application (terminal or text file for example. and resize it so main blender window is also visible)
  • Now select blender window (scroll, or perform other operation to verify window is active)
  • Alt + tab to switch to the application window from step 2

Hover mouse over viewport area of Blender window and scroll (notice playback is moving instead of zooming the viewport)

Video: F14138521

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD Radeon RX 6800 ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `55485cb379` Worked: 3.3 Caused by 8bc76bf4b9 **Short description of error** Alt key remains locked in inactive blender window when alt tab is used to switch to another application **Exact steps for others to reproduce the error** - Open default blender scene - Open another application (terminal or text file for example. and resize it so main blender window is also visible) - Now select blender window (scroll, or perform other operation to verify window is active) - Alt + tab to switch to the application window from step 2 # Hover mouse over viewport area of Blender window and scroll (notice playback is moving instead of zooming the viewport) Video: [F14138521](https://archive.blender.org/developer/F14138521/2023.01.11-01.31.02.mp4)
Author

Added subscriber: @PAL123

Added subscriber: @PAL123
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. Do you mean you can still perform operations in inactive window?
Could you elaborate the issue and reproducing steps more precisely?

Hi, thanks for the report. Do you mean you can still perform operations in inactive window? Could you elaborate the issue and reproducing steps more precisely?
Author

2023.01.11-01.31.02.mp4
here you have a pictorial representation, i opened blender 3.4.1 and tab with alt tab out, in the example for irfanview. while irfanview is active i scroll my mouse wheel over the inactive blender window and this moves the keyframe. this actually only happens if you use alt + mw scroll.

then i use blender 3.3.2 where i do the same procedure again and there the mw scroll in the 3d viewport only zooms because no alt key is active.

another thing in 2D Animation
It has also happened to me that when I tab out in new file 2D Animation in Blender with alt+tab, that when I tab back into the Blender window, the tab is also active, it makes the strokes as if alt were active (straight stroke) and then I have to press alt once so that alt+ draw stroke is deactivated again. but I can't easily reproduce this problem

[2023.01.11-01.31.02.mp4](https://archive.blender.org/developer/F14138521/2023.01.11-01.31.02.mp4) here you have a pictorial representation, i opened blender 3.4.1 and tab with alt tab out, in the example for irfanview. while irfanview is active i scroll my mouse wheel over the inactive blender window and this moves the keyframe. this actually only happens if you use alt + mw scroll. then i use blender 3.3.2 where i do the same procedure again and there the mw scroll in the 3d viewport only zooms because no alt key is active. another thing in 2D Animation It has also happened to me that when I tab out in new file 2D Animation in Blender with alt+tab, that when I tab back into the Blender window, the tab is also active, it makes the strokes as if alt were active (straight stroke) and then I have to press alt once so that alt+ draw stroke is deactivated again. but I can't easily reproduce this problem
Author

but here I was able to record it again, sometimes it happens and sometimes it doesn't....in this case I used crtl to erase and then tabed out

and sometimes it's even like that, after tabbing out, I suddenly can't draw at all anymore, then I can't move my view smoothly anymore, it lags and then I have to restart Blender
2023.01.11-02.03.55.mp4

but here I was able to record it again, sometimes it happens and sometimes it doesn't....in this case I used crtl to erase and then tabed out and sometimes it's even like that, after tabbing out, I suddenly can't draw at all anymore, then I can't move my view smoothly anymore, it lags and then I have to restart Blender [2023.01.11-02.03.55.mp4](https://archive.blender.org/developer/F14138548/2023.01.11-02.03.55.mp4)
Author

here again as in the previous video, twice it happened again, it only happens sometimes.
but I have to say that I use a draw tablet in 2D animation, but in the very first video when modeling, the draw tablet was not connected to the pc.

and in blender 3.3.2 none of the mentioned problems happen to me
2023.01.11-02.08.47.mp4

here again as in the previous video, twice it happened again, it only happens sometimes. but I have to say that I use a draw tablet in 2D animation, but in the very first video when modeling, the draw tablet was not connected to the pc. and in blender 3.3.2 none of the mentioned problems happen to me [2023.01.11-02.08.47.mp4](https://archive.blender.org/developer/F14138552/2023.01.11-02.08.47.mp4)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Hi, thanks for the video demonstration. I can confirm now.

Hi, thanks for the video demonstration. I can confirm now.
Pratik Borhade changed title from tab key active in inactive blender window when tab out since 3.4 to Regression: Alt key remains locked in inactive blender window 2023-01-11 08:11:14 +01:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by 8bc76bf4b9
@ideasman42 ^

Caused by 8bc76bf4b9 @ideasman42 ^
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Personally would not have this set as high-priority, despite the change in behavior caused by that commit.

This reported bad behavior is only while the Blender window is not active, does not focus, which should not be considered a usable state. Make the blender window active and it works as expected, which is by platform design.

Personally would not have this set as high-priority, despite the change in behavior caused by that commit. This reported bad behavior is only **while** the Blender window is not active, does not focus, which should not be considered a usable state. Make the blender window active and it works as expected, which is by platform design.

This issue was referenced by 00ac2ddca2

This issue was referenced by 00ac2ddca23ee7391da775563edb5685ccbf6a33

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2023-01-22 10:51:15 +01:00

Agree this isn't high priority although as a regression it's good to flag it as something to fix by the next release.

Agree this isn't high priority although as a regression it's good to flag it as something to fix by the next release.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103722
No description provided.