Fix T103722: Stuck modifiers for wheel events over unfocused windows

Regression in [0] caused mouse wheel events over windows without focus
to use the modifier state at the point the window was de-activated.

Now un-focused windows have all events release, when focused again
modifier press events are set again.

[0]: 8bc76bf4b957c51ddc5a13c6305f05c64b218a27